--- a/paper/references.bib
+++ b/paper/references.bib
@@ -123,3 +123,10 @@
     url = {https://www.nytimes.com/interactive/2024/us/elections/presidential-election-swing-states.html},
     note = {The New York Times}
 }
+@book{tellingstories,
+    title = {Telling Stories with Data},
+    author = {Rohan Alexander},
+    year = {2023},
+    publisher = {Chapman; Hall/CRC},
+    url = {https://tellingstorieswithdata.com/}
+}
